Added redis and multiple guesses functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,10 @@
         //checkGuess();
         console.log("Enter clicked!")
         getGuesses();
+        row ++;
+        currentGuess = ""
+        createRow();
+        clicked = [0,0,0,0,0]
       }
     });
 
